# openlager

./: .gitignore  CMakeLists.txt  Makefile  README.md  flash.cfg  lager.cfg  stm32f411.cfg
hardware/: fp-lib-table  openLager-cache.lib  openLager.kicad_pcb  openLager.pro  openLager.sch  pinsAssignment.txt
hardware/gerbers/: openLager-B.Cu.gbl  openLager-B.Mask.gbs  openLager-B.SilkS.gbo  openLager-Edge.Cuts.gm1  openLager-F.Cu.gtl  openLager-F.Mask.gts  openLager-F.SilkS.gto  openLager-In1.Cu.g2  openLager-In2.Cu.g3  openLager.drl
hardware/mfg_files/: openLager-B.Cu.gbl  openLager-B.Mask.gbs  openLager-B.Paste.gbp  openLager-B.SilkS.gbo  openLager-Edge.Cuts.gm1  openLager-F.Cu.gtl  openLager-F.Fab.gbr  openLager-F.Mask.gts  openLager-F.Paste.gtp  openLager-F.SilkS.gto  openLager-In1.Cu.g2  openLager-In2.Cu.g3  openLager-bottom.pos  openLager-top.pos  openLager.drl  openLager.rpt  openLager_BOM.csv
hardware/openLagerFootprints.pretty/: C_0402.kicad_mod  HRS_DM3CS-SF.kicad_mod  LED_0603.kicad_mod  QFN-48-1EP_7x7mm_Pitch0.5mm.kicad_mod  R_0402.kicad_mod  SOT95P280X145-5N.kicad_mod  Socket_Strip_Straight_1x01.kicad_mod  Socket_Strip_Straight_1x06.kicad_mod  TP.kicad_mod  X3-SMD-3.6X1.3X0.8MM.kicad_mod
inc/: ffconf.h  lagercfg.h  led.h  morsel.h  sdio.h  systick_handler.h  usart.h
libs/STM32F4xx_StdPeriph_Driver/: en.ultimate-liberty-v2.txt
libs/STM32F4xx_StdPeriph_Driver/inc/: misc.h  stm32f4xx_adc.h  stm32f4xx_cec.h  stm32f4xx_dcmi.h  stm32f4xx_dma.h  stm32f4xx_dma2d.h  stm32f4xx_dsi.h  stm32f4xx_exti.h  stm32f4xx_fmpi2c.h  stm32f4xx_fsmc.h  stm32f4xx_hash.h  stm32f4xx_iwdg.h  stm32f4xx_ltdc.h  stm32f4xx_qspi.h  stm32f4xx_rng.h  stm32f4xx_sai.h  stm32f4xx_sdio.h  stm32f4xx_spi.h  stm32f4xx_tim.h  stm32f4xx_usart.h  stm32f4xx_wwdg.h  system_stm32f4xx.h
libs/STM32F4xx_StdPeriph_Driver/src/: stm32f4xx_crc.c  stm32f4xx_cryp_aes.c  stm32f4xx_cryp_des.c  stm32f4xx_dac.c  stm32f4xx_dbgmcu.c  stm32f4xx_dcmi.c  stm32f4xx_dma.c  stm32f4xx_dsi.c  stm32f4xx_flash.c  stm32f4xx_flash_ramfunc.c  stm32f4xx_fmc.c  stm32f4xx_fsmc.c  stm32f4xx_gpio.c  stm32f4xx_hash.c  stm32f4xx_hash_md5.c  stm32f4xx_iwdg.c  stm32f4xx_ltdc.c  stm32f4xx_qspi.c  stm32f4xx_rcc.c  stm32f4xx_sai.c  stm32f4xx_spdifrx.c  stm32f4xx_syscfg.c  stm32f4xx_tim.c  stm32f4xx_usart.c  stm32f4xx_wwdg.c
libs/cmsis/inc/: core_cm4.h  stm32f4xx.h
libs/cmsis/src/: system_stm32f4xx.c
libs/inc/: jsmn.h  mmcreg.h
libs/src/: jsmn.c
loader/: memory.ld  openloader.c
misc/: avstack.pl
shared/: diskio.c  led.c  morsel.c  sdio.c  startup.c  stm32f411.ld  systick_handler.c  usart.c
src/: LICENSE  diskio.c  memory.ld  openlager.c  stm32f411.ld
src/libs/STM32F4xx_StdPeriph_Driver/inc/: stm32f4xx_can.h  stm32f4xx_crc.h  stm32f4xx_cryp.h  stm32f4xx_dac.h  stm32f4xx_dbgmcu.h  stm32f4xx_flash.h  stm32f4xx_flash_ramfunc.h  stm32f4xx_fmc.h  stm32f4xx_gpio.h  stm32f4xx_i2c.h  stm32f4xx_lptim.h  stm32f4xx_pwr.h  stm32f4xx_rcc.h  stm32f4xx_rtc.h  stm32f4xx_spdifrx.h  (+1 more)
startup/: STM32F411CCUX_FLASH.ld
(+17 files in other folders)
